# autotools-tutorial

./: .gitignore  Makefile.am  README.md  configure.ac  example.m4
lib/: Makefile.am  flush_all.cpp  flush_all.h  say.c
po/: Makevars  POTFILES.in  autotools-tutorial.pot  fr.po
sample/: Makefile.am  tanimura.cpp  tanimura.h
src/: Makefile.am  gettext.h  main.c
