# autotools-tutorial (c) 2019 by Kazune Takahashi
#
# autotools-tutorial is licensed under a
# Creative Commons Attribution-ShareAlike 3.0 Unported License.
#
# You should have received a copy of the license along with this
# work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.

SUBDIRS = lib src sample po
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = m4/ChangeLog