# Prelude.
AC_INIT([autotools-tutorial], [3.14], [@kazunetakahashi])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Checks for programs
AC_PROG_CC
# Checks for other needed files
# Output files.
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
