# autotools-tutorial (c) 2019 by Kazune Takahashi
#
# autotools-tutorial is licensed under a
# Creative Commons Attribution-ShareAlike 3.0 Unported License.
#
# You should have received a copy of the license along with this
# work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.

lib_LTLIBRARIES = libflushall.la
libflushall_la_SOURCES = flush_all.cpp flush_all.h

lib_LTLIBRARIES += libhello.la
libhello_la_SOURCES = say.c say.h gettext.h
