# autotools-tutorial (c) 2019 by Kazune Takahashi
#
# autotools-tutorial is licensed under a
# Creative Commons Attribution-ShareAlike 3.0 Unported License.
#
# You should have received a copy of the license along with this
# work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.

LDADD = ../lib/libflushall.a
AM_CPPFLAGS = -I$(srcdir)/../lib
bin_PROGRAMS = tanimura
tanimura_SOURCES = tanimura.h tanimura.cpp